# lambda-calculus

./: .gitignore  TODO  lambda-calculus.cabal  stack.yaml
docs/: index.html  lambda-calculus.ebnf  lambda-calculus.html  style.css
src/: Interpreter.hs  LambdaCalculus.hs  Main.hs  Parser.hs
src/LambdaCalculus/: AST.hs  Parser.hs
